--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Useful tools for manipulating object streams. Will be especially helpful to developers used to map - filter - reduce approach of nodejs arrays.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/tap/bin/run.js test/test.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/kichooo/object-stream-tools/issues"
   },
-  "homepage": "https://github.com/kichooo/object-stream-tools#readme"
+  "homepage": "https://github.com/kichooo/object-stream-tools#readme",
+  "devDependencies": {
+    "tap": "^5.7.2"
+  }
 }
