--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
   },
   "homepage": "https://github.com/kichooo/object-stream-tools#readme",
   "devDependencies": {
+    "JSONStream": "^1.1.1",
     "tap": "^5.7.2"
+  },
+  "dependencies": {
+    "stream-to-array": "^2.3.0",
+    "through2-concurrent": "^1.1.1"
   }
 }
