--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-stream-tools",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Useful tools for manipulating object streams. Will be especially helpful to developers used to map - filter - reduce approach of nodejs arrays.",
   "main": "index.js",
   "scripts": {
@@ -35,6 +35,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kichooo/object-stream-tools/issues"
+  },
+  "engines": {
+    "node" : ">=6.0.0"
   },
   "homepage": "https://github.com/kichooo/object-stream-tools#readme",
   "devDependencies": {
